frontend: fixed overflow issues

--- a/projects/site/src/components/navigation/Header/header.module.scss
+++ b/projects/site/src/components/navigation/Header/header.module.scss
@@ -8,6 +8,7 @@
   display: flex;
   justify-content: space-between;
   padding-top: 15px;
+  z-index: 10;
 }
 
 .searchIcon {
