--- a/projects/site/src/components/navigation/NavBar/navbar.module.scss
+++ b/projects/site/src/components/navigation/NavBar/navbar.module.scss
@@ -5,6 +5,7 @@
   width: 100vw;
   position: fixed;
   bottom: 0;
+  z-index: 10;
 }
 
 .innerbox {
